2011-10-25  Murray Cumming  <murrayc@murrayc.com>

	Add #includes needed with the latest glibmm.

	* gdk/src/color.hg:
	* gdk/src/pixbuf.hg:
	* gdk/src/pixbufanimationiter.hg:
	* gdk/src/pixbufformat.hg:
	* gdk/src/rectangle.hg:
	* gdk/src/rgba.hg:
	* gdk/src/types.hg:
	* gtk/gtkmm/object.h:
	* gtk/gtkmm/stock.cc:
	* gtk/gtkmm/stockid.h:
	* gtk/src/border.hg:
	* gtk/src/enums.hg:
	* gtk/src/main.hg:
	* gtk/src/papersize.hg:
	* gtk/src/textattributes.hg: Add individual includes now that gmmproc does not 
	add #include glibmm.h at the top of every generated header.

2011-10-13  Murray Cumming  <murrayc@murrayc.com>

	Deprecate Gtk::Table in favour of Gtk::Grid.

	* gtk/src/table.hg: Deprecate the whole thing.

2011-10-18  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Undo removal of 'constversion' in Gtk::Dialog::get_vbox().

	* gtk/src/dialog.hg: Insert 'constversion' in get_vbox() const, because
	a bug in gmmproc has been fixed in glibmm 2.29.13. Bug #657751, comment 8.

This is the master branch, for gtkmm 3.3/4. See also the gtkmm-3-2 branch.

3.2.0:

2011-09-27  Murray Cumming  <murrayc@murrayc.com>

	Assistant: Deprecate some methods, because the C functions are deprecated.

	* gtk/src/assistant.hg: get/set_page_header_image(), 
  get/set_page_side_image(): Deprecate these.

2011-09-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* gtk/src/appchooserdialog.hg: Inlclude giomm/file.h.

2011-09-26  Murray Cumming  <murrayc@murrayc.com>

	Remove Application, because it is still not ready.

	* gtk/src/application.[hg|ccg]: Removed.
	* gio/src/window.hg:
	* gio/src/filelist.am:
	* goi/giomm.h: Do not mention it.
	See bug #637445#c29

2011-09-20  Murray Cumming  <murrayc@murrayc.com>

	TreeView: Added unset_row_separator_func().

	* gtk/src/treeview.[hg|ccg]: Added unset_row_separator_func() because func 
	may be NULL.

2011-09-20  Murray Cumming  <murrayc@murrayc.com>

	TreeView: set_row_separator_func(): Add some documentatino.
