@@ -461,6 +461,42 @@ Returns a #GtkTreePath referenced by @iter.
 </return>
 </function>
 
+<!-- Avoid using @ on a parameter name used in a code example,
+  because that confuses doxygen, which then gets the start and end tags out of 
+  sequence. -->
+<function name="gtk_tree_model_rows_reordered">
+<description>
+Emits the #GtkTreeModel::rows-reordered signal on @tree_model.
+
+This should be called by models when their rows have been
+reordered.
+
+</description>
+<parameters>
+<parameter name="tree_model">
+<parameter_description> a #GtkTreeModel
+</parameter_description>
+</parameter>
+<parameter name="path">
+<parameter_description> a #GtkTreePath pointing to the tree node whose children
+have been reordered
+</parameter_description>
+</parameter>
+<parameter name="iter">
+<parameter_description> a valid #GtkTreeIter pointing to the node whose children
+have been reordered, or %NULL if the depth of @path is 0
+</parameter_description>
+</parameter>
+<parameter name="new_order">
+<parameter_description> an array of integers mapping the current position of
+each child to its old position before the re-ordering,
+i.e. new_order&lt;literal&gt;[newpos] = oldpos&lt;/literal&gt;
+</parameter_description>
+</parameter>
+</parameters>
+<return></return>
+</function>
+
 
 <function name="gtk_tree_view_column_get_cell_renderers">
 <description>
