@@ -1,0 +1,7 @@
+#/bin/sh -e
+
+for x in $(find ${builddir}/docs/reference/html/ -name "*.html")
+do
+  # echo Validating $x
+  xmllint --noout $x || exit 1
+done
