@@ -1,5 +1,12 @@
 2011-10-25  Murray Cumming  <murrayc@murrayc.com>
 
+	make check: Use xmllint to check the generated .html documentation.
+
+	* tests/test_validate_docs_xhtml.sh: Add a small script to run xmllint.
+	* Makefile.am: Run this script during make check.
+
+2011-10-25  Murray Cumming  <murrayc@murrayc.com>
+
 	Add #includes needed with the latest glibmm.
 
 	* gdk/src/color.hg:
